src/modules/commando/skin/commando.less
@import url("chrome://komodo/skin/_config/window.less");
@import url("chrome://komodo/skin/_config/editor.less");
@import url("chrome://komodo/skin/_config/toolbars.less");

#commando-panel
{
    border: 0;
    -moz-box-orient: horizontal;
    
    &.blocked
    {
        & > *
        {
            opacity: 0.4;
        }
    }
    
    &.previewing:not(.maximized) #commando-preview
    {
        border-left: @hud-border;
        width: 600px;
    }
    
    &.previewing.maximized #commando-preview
    {
        width: 600px;
    }
    
    #commando-panel-wrapper
    {
        width: 500px;
        transition: visibility 10ms; /* Hack to prevent XUL from hiding the commando panel apparently */
    }
    
    &.previewing:not(.maximized) #commando-panel-wrapper
    {
        width: 250px;
    }
    
    &.previewing.maximized #commando-panel-wrapper
    {
        visibility: collapse;
    }
    
    #commando-search-wrapper
    {
        margin: 4px;
    }

    #commando-search
    {
        &, *
        {
            font-size: 1.4rem;
        }

        padding: 4px;
        border: 0;
        margin: 0;
        background-color: transparent !important;
        color: @hud-selection-foreground;
        -moz-appearance: none;
    }

    #commando-subscope-wrap
    {
        visibility: collapse;
        font-weight: bold;
        padding: 4px;
        font-size: 1.1rem;
        max-width: 490px;

        .icon
        {
            background-repeat: no-repeat;
            width: 16px;
            height: 16px;
            background-size: 16px;
            max-height: 16px;
            padding-top: 3px;
            margin-right: 4px;
        }

        description
        {
            margin: 0;
            padding: 0;
            padding-top: 2px;
        }
    }
    
    #commando-tip 
    {
        max-width: 490px;
        margin: 0;
        padding: 4px;
        background: transparent !important;
        opacity: 0.6;
        
        &[tip-type="error"]
        {
            color: #894343 !important;
        }
    }
    
    &.previewing #commando-tip
    {
        max-width: 240px;
    }
    
    #commando-loader
    {
        height: 1px;
        width: 100%;
        opacity: 0;
        transition: opacity 0.2s linear;
        visibility: hidden;
        transform: translateZ(0);
    }

    &.loading #commando-search-wrapper
    {
        background-image: linear-gradient(to right, rgba(0,0,0,0.0) 0, @hud-loader-color 200px, @hud-loader-color 300px, rgba(0,0,0,0.0) 500px);
        background-repeat: no-repeat;
        animation: loading 1s infinite cubic-bezier(1.0, 0.3, 0.5, 1.0);
        transform: translateZ(0);
    }
    
    &.previewing.loading #commando-search-wrapper
    {
        background-image: linear-gradient(to right, rgba(0,0,0,0.0) 0, @hud-loader-color 100px, @hud-loader-color 150px, rgba(0,0,0,0.0) 250px);
        animation: loadingWithPreview 1s infinite cubic-bezier(1.0, 0.3, 0.5, 1.0);
    }

    @keyframes loading {
        0% {
           background-position: -300px 0;
        }
        50% {
           background-position: 300px 0;
        }
        100% {
           background-position: -300px 0;
        }
    }
    
    @keyframes loadingWithPreview {
        0% {
           background-position: -150px 0;
        }
        50% {
           background-position: 150px 0;
        }
        100% {
           background-position: -150px 0;
        }
    }
    
    menulist#commando-scope
    {
        -moz-appearance: none;
        background-color: transparent !important;
        width: 40px;
        border: 0;
        margin: 0;

        & > .menulist-label-box
        {
            .menulist-label
            {
                visibility: collapse;
            }
            
            .menulist-icon
            {
                width: 16px;
            }
        }
        
        .menulist-dropmarker
        {
            background: transparent;
            border: 0;
            padding: 0;
        }
        
        menuitem .menu-iconic-left
        {
            visibility: visible;
            display: inherit;
            -moz-margin-end: 4px !important; /* Whats wrong with `margin` mozilla? */
        }
    }

    richlistbox#commando-results
    {
        -moz-appearance: none;
        background: transparent !important;
        border: 0;
        margin: 0;
        
        &:not(.has-results)
        {
            visibility: collapse;
        }

        scrollbox
        {
            overflow-x: hidden !important;
        }

        richlistitem
        {
            padding: 3px 4px 3px 10px;
            
            label, description
            {
                font-size: 1.1rem;
                line-height: 1.1rem;
            }
            
            .icon-wrapper
            {
                min-height: 1.5rem;
            }
            .icon
            {
                background-repeat: no-repeat;
                width: 16px;
                height: 16px;
                max-height: 16px;
                background-size: 16px 16px;
            }
            
            .number-wrapper
            {
                .number
                {
                    margin: 0 0 0 6px;
                    opacity: 0.6;
                }
            }

            .entry-wrapper
            {
                .title
                {
                    margin: 0 0 0 6px;
                    vertical-align: middle;
                }

                .descriptionPrefix
                {
                    font-style: italic;
                    max-width: 100px;
                    opacity: 0.7;
                    white-space: nowrap;
                    overflow: hidden;
                    text-overflow: ellipsis;
                    margin: 0 0 0 6px;
                }

                .description
                {
                    opacity: 0.7;
                    margin: 0 0 0 6px;
                }
            }
            
            .entry-wrapper
            {
                &, .title, .descriptionPrefix, .description
                {
                    margin-top: 0;
                    margin-bottom: 0;
                    padding-top: 0;
                    padding-bottom: 0;
                    line-height: 1.1rem;
                    height: 1.1rem;
                }
            }
            
            &:not(.multiline) .entry-wrapper .descriptionPrefix .description
            {
                margin: 0 0 0 6px;
            }
            
            &.multiline .entry-wrapper .descriptionPrefix .description
            {
                margin: 0 6px 0 0;
            }
    
            &:not(.multiline) .entry-wrapper-outer
            {
                -moz-box-orient: horizontal;
            }
            
            &.multiline .entry-wrapper-outer
            {
                -moz-box-orient: vertical;
            }
        }

    }

    &.subscoped richlistitem
    {
        padding-left: 10px !important;
    }
}

#quickCommando /* toolbar */
{
    -moz-appearance: none;
    border: 0 !important;
    padding-right: 4px;
}

#commando-search-quick
{
    -moz-appearance: none;
    padding: 2px;
    margin: 0;
    width: 200px;
    
    background: @main-toolbox-findtoolbar-background;
    border-radius: 4px;
    border: @main-toolbox-findtoolbar-border;
    box-shadow: @main-toolbox-findtoolbar-shadow;
    cursor: text;
    color: @main-toolbox-findtoolbar-color;
    
    &[placeholder="true"]
    {
        color: rgba(150,150,150,0.8);
    }
    
    &[open]
    {
        transition: all 0.1s;
        border-radius: 0;
        
        width: 495px;
        background-color: @hud-selection-background;
        color: @hud-selection-foreground;
    }
    
}

